Fix AVX512-FP16 build

Was missing explicit conversion from float to FastType when
FastType isn't float.

Fixes: QTBUG-133430
Change-Id: I227558f6ecc1018158c88514dbb23bfe095ef77f
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>
(cherry picked from commit d076420bb0740e0410a886fc2feb5fcf8b729f4d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit f20166d2de87b56c88e37d6cd458888980d32430)